--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html><head><title>Acoustics of Mind</title><link rel='stylesheet' href='style.css'></head><body><h1>Welcome to Acoustics of Mind</h1></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Acoustics of Mind</title>
+    <link rel='stylesheet' href='style.css'>
+</head>
+<body>
+    <h1>Welcome to Acoustics of Mind</h1>
+    <p>This is the prototype homepage for the identity recognition project across time and biology.</p>
+</body>
+</html>
