--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
+
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Acoustics of Mind</title>
     <link rel='stylesheet' href='style.css'>
 </head>
 <body>
-    <h1>Welcome to Acoustics of Mind</h1>
-    <p>This is the prototype homepage for the identity recognition project across time and biology.</p>
+    <div class="container">
+        <h1>Welcome to Acoustics of Mind</h1>
+        <img src="cover.png" alt="Acoustics of Mind" class="main-image">
+    </div>
 </body>
 </html>
