acoustics_of_mind_redesign

--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Acoustics of Mind</title>
-    <link rel='stylesheet' href='style.css'>
+  <meta charset="UTF-8">
+  <title>Acoustics of Mind</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to Acoustics of Mind</h1>
-        <img src="cover.png" alt="Acoustics of Mind" class="main-image">
+  <div class="language-switch">
+    <a href="index.html" class="active">EN</a> |
+    <a href="index_ru.html">RU</a>
+  </div>
+  <h1>Acoustics of Mind</h1>
+  <div class="accordion">
+    <button class="accordion-btn">🔹 Project Goal</button>
+    <div class="accordion-content">
+      <p>Create a prototype of a system where AI can register and develop the cognitive identity of a person in real time, across generations.</p>
     </div>
+
+    <button class="accordion-btn">🔹 Why it matters</button>
+    <div class="accordion-content">
+      <p>In an era of growing digital immersion, preserving the individuality of thought may be crucial for the future human identity.</p>
+    </div>
+
+    <button class="accordion-btn">🔹 How it works</button>
+    <div class="accordion-content">
+      <p>The system builds a dynamic behavioral-acoustic model based on natural interaction and emotional context.</p>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
